# pdf-layout-markdown

./: .gitignore  README.md  USAGE_GUIDE.md  example.py  invoice_new.md  output_fixed.md  pyproject.toml  simple_example.py
src/pdf_layout_markdown/: __init__.py  converter.py  layout.py
src/pdf_layout_markdown/analyzers/: __init__.py  page_analyzer.py
src/pdf_layout_markdown/detectors/: __init__.py  base.py  rectangle_detector.py  table_detector.py
src/pdf_layout_markdown/extractors/: __init__.py  base.py  text_extractor.py
src/pdf_layout_markdown/generators/: __init__.py  base.py  fixed_format_generator.py  markdown_generator.py  structured_markdown_generator.py
src/pdf_layout_markdown/models/: __init__.py  rectangle.py  text_box.py
src/pdf_layout_markdown/postprocessors/: __init__.py  base.py  filter_processor.py  merge_processor.py  nms_processor.py
src/pdf_layout_markdown/renderers/: __init__.py  page_renderer.py
src/pdf_layout_markdown/visualizers/: __init__.py  annotator.py
